@@ -1436,16 +1436,8 @@ valueType org.fenixedu.academic.domain.degreeStructure.CycleTypes as CycleTypes 
     }
 
     class student.Registration  {
-        Character approvationRatioClassification;
-        Character arithmeticMeanClassification;
-        Character entryGradeClassification;
         YearMonthDay homologationDate;
         Integer number;
-        String agreementInformation;
-        //deprecated
-        Boolean requestedChangeBranch;
-        //deprecated
-        Boolean requestedChangeDegree;
         YearMonthDay startDate;
         YearMonthDay studiesStartDate;
         EntryPhase entryPhase;
