@@ -1,3 +1,5 @@
+- Refactor: Removed deprecated Registration slots 
+
 26.1.0 (05-02-2020)
 - Refactor: Replaced semester references by childOrder
 - Refactor: Added domain relation between ExecutionInterval and AcademicCalendarEntry
